--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -15,7 +15,8 @@ a {
   max-width: 300px;
   height: 300px;
   border-radius: 6px;
-  background-color: white;
+  background-color: var(--color-white);
+  color: var(--color-secondary);
   box-shadow: 0 6px 12px rgba(0,0,0,0.1);
   overflow: hidden;
   transition: 0.2s ease-in-out;
@@ -29,7 +30,8 @@ a {
 .card__image {
   position: relative;
   width: 100%;
-  height: 50%;
+  height: 40%;
+  max-height: 40%;
 }
 
 .card__image img{
@@ -54,7 +56,7 @@ a {
 .card__content strong {
   font-size: 1.3rem;
   font-weight: 800;
-  color: var(--color-gray);
+  color: var(--color-secondary);
 }
 
 @media only screen and (max-width: 980px){
