--- a/src/pages/styles/Country.css
+++ b/src/pages/styles/Country.css
@@ -2,8 +2,7 @@
   position: relative;
   width: 100%;
   min-height: 80vh;
-  height: 80vh;
-  max-height: 80vh;
+  height: 100vh;
   padding: var(--space-big);
   background-color: var(--color-white);
 }
@@ -11,13 +10,14 @@
 .country a {
   font-size: 1.3rem;
   font-weight: 600;
-  color: var(--color-third);
+  color: var(--color-secondary);
   padding: var(--space-small) var(--space-medium);
   border-radius: 3px;
-  background-color: var(--color-white);
+  background-color: var(--color-main);
   box-shadow: 0 1px 9px rgba(0,0,0,.1);
   cursor: pointer;
   transition: 0.3s ease-in-out;
+  margin: 0 var(--space-small);
 }
 
 .country a:hover {
@@ -30,6 +30,7 @@
   flex-flow: row wrap;
   width: 100%;
   height: 100%;
+  color: var(--color-secondary);
 }
 
 .country__image {
@@ -39,7 +40,7 @@
   padding: var(--space-big);
   min-width: 368px;
   width: 50%;
-  height: 100%;
+  height: 66%;
 }
 
 .country__image img {
@@ -72,8 +73,17 @@
   padding: 3px 0;
 }
 
+.country__borders {
+  display: flex;
+  flex-flow: row wrap;
+  max-width: 100%;
+}
+
 .country__borders p{
   padding: var(--space-small);
+}
+
+.country__borders p a {
 }
 
 @media only screen and (max-width: 768px){
