--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 :root{
   font-size: 62.5%;
+  transition: 0.3s ease-in-out;
   
   /* COLORS */
   --color-main: hsl(0, 0%, 98%);
@@ -20,7 +21,7 @@
 h1,h2,h3,h4 {
   font-size: 2rem;
   font-weight: 800;
-  color: var(--color-black);
+  color: var(--color-secondary);
 }
 
 * {
