--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -50,7 +50,7 @@ a {
   line-clamp: 1;
   -webkit-line-clamp: 1;
   overflow-y: hidden;
-  padding: var(--space-small) 0;
+  margin: var(--space-small) 0;
 }
 
 .card__content strong {
